# opsagent

./: .gitignore  .golangci.yml  AGENTS.md  Makefile  README.md  go.mod  go.sum
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cmd/agent/: main.go  main_test.go
configs/: config.yaml
docs/: README.md  changelog.md  operations-guide.md  platform-integration-guide.md  plugin-contract.md  sdk-development-guide.md  security-hardening.md
docs/archive/: README.md
internal/app/: agent.go  agent_test.go  audit.go  audit_test.go  commands.go  commands_test.go  interfaces.go  metrics.go  metrics_test.go  options.go
internal/collector/: accumulator.go  accumulator_test.go  aggregator.go  benchmark_test.go  buffer.go  buffer_test.go  collector.go  host.go  host_test.go  input.go  manager.go  manager_test.go  metric.go  metric_test.go  output.go  processor.go  registry.go  registry_test.go  reload.go  reload_test.go  scheduler.go  scheduler_test.go  util.go  util_test.go
internal/config/: config.go  config_test.go  diff.go  diff_test.go  reload.go  reload_test.go
proto/: agent.proto
rust-runtime/: Cargo.toml
rust-runtime/src/: chunking.rs  error.rs  main.rs  plugin.rs  protocol.rs  registry.rs
rust-runtime/src/handlers/: conn_analyze.rs  ebpf_collect.rs  fs_scan.rs  local_probe.rs  log_parse.rs  mod.rs  text_process.rs
scripts/: ci-package.sh  dev.sh  package.sh  smoke-test.sh  uninstall.sh
sdk/opsagent-plugin/: Cargo.toml
sdk/opsagent-plugin/src/: error.rs  lib.rs  protocol.rs
sdk/opsagent-plugin/tests/: integration.rs
(+161 files in other folders)
