[package]
name = "opsagent-plugin"
version = "0.1.0"
edition = "2021"
description = "SDK for writing OpsAgent custom plugins"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
